--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                     <div>
-                        <a href="#" class="flex justify-center items-center w-48 p-2 rounded-lg bg-noir border-2 hover:bg-blanc text-blanc hover:text-noir font-semibold font-titre">Voir plus</a>
+                        <a href="/realisations" class="flex justify-center items-center w-48 p-2 rounded-lg bg-noir border-2 hover:bg-blanc text-blanc hover:text-noir font-semibold font-titre">Voir plus</a>
                     </div>
                 </div>
                 <div class="px-4">
