--- a/src/pages/realisations.astro
+++ b/src/pages/realisations.astro
@@ -11,9 +11,8 @@
         <div class="flex justify-between items-center h-16">
           <div class="flex items-center space-x-7 mt-1">
             <a href="#home" class="flex items-center">
-              <img src="Logo.svg" alt="Logo actu" class="w-20" />
+              <img src="/Logo.svg" alt="Logo actu" class="w-20" />
             </a>
-            <a href="#home" class="flex items-center"><img src="Logo.svg" alt="Logo actu" class="w-20 items-center fixed"></a>
           </div>
           <div class="flex items-center space-x-7 mt-1">
             <a href="/" class="outline-none">
