--- a/src/pages/realisations.astro
+++ b/src/pages/realisations.astro
@@ -16,15 +16,7 @@
           </div>
           <div class="flex items-center space-x-7 mt-1">
             <a href="/" class="outline-none">
-              <svg
-                class="w-10 h-10 text-blanc"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
+              <svg class="w-10 h-10 text-blanc" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                 <path d="M15 19l-7-7 7-7"></path>
               </svg>
             </a>
@@ -67,6 +59,13 @@
         <figcaption class="absolute inset-0 flex items-end text-2xl font-bold font-titre text-transparent p-3 clip-path-inset transition-[clip-path,color] duration-400 group-hover:clip-path-none group-hover:text-blanc group-hover:bg-noir/60">Evolution du Design Graphique</figcaption>
         <div class="absolute top-2 left-2 bg-blanc text-noir text-sm font-semibold font-texte px-2 py-1 rounded-md opacity-0 group-hover:opacity-100 transition-opacity duration-300">2024</div>
         <div class="absolute top-2 right-2 bg-blanc text-noir text-sm font-semibold font-texte px-2 py-1 rounded-md opacity-0 group-hover:opacity-100 transition-opacity duration-300">Infographie</div>
+      </figure>
+
+      <figure class="relative group rounded-xl overflow-hidden cursor-pointer w-96 h-96">
+        <img src="/IconImg.png" alt="Mountains" class="w-full h-full object-cover transition-transform duration-400 group-hover:scale-110"/>
+        <figcaption class="absolute inset-0 flex items-end text-2xl font-bold font-titre text-transparent p-3 clip-path-inset transition-[clip-path,color] duration-400 group-hover:clip-path-none group-hover:text-blanc group-hover:bg-noir/60">Iconographie</figcaption>
+        <div class="absolute top-2 left-2 bg-blanc text-noir text-sm font-semibold font-texte px-2 py-1 rounded-md opacity-0 group-hover:opacity-100 transition-opacity duration-300">2024</div>
+        <div class="absolute top-2 right-2 bg-blanc text-noir text-sm font-semibold font-texte px-2 py-1 rounded-md opacity-0 group-hover:opacity-100 transition-opacity duration-300">Design Graphique</div>
       </figure>
 
       <figure class="relative group rounded-xl overflow-hidden cursor-pointer w-96 h-96">
