--- a/src/pages/realisations.astro
+++ b/src/pages/realisations.astro
@@ -33,6 +33,13 @@
         <div class="absolute top-2 right-2 bg-blanc text-noir text-xs md:text-sm font-semibold font-texte px-2 py-1 rounded-md opacity-0 group-hover:opacity-100 transition-opacity duration-300">Audiovisuelle</div>
       </figure>
 
+      <figure class="relative group rounded-xl overflow-hidden cursor-pointer w-96 h-96">
+        <img src="/Mykonos.png" alt="Mountains" class="w-full h-full object-cover transition-transform duration-400 group-hover:scale-110"/>
+        <figcaption class="absolute inset-0 flex items-end text-2xl font-bold font-titre text-transparent p-3 clip-path-inset transition-[clip-path,color] duration-400 group-hover:clip-path-none group-hover:text-blanc group-hover:bg-noir/60">Affiche Animée Mykonos</figcaption>
+        <div class="absolute top-2 left-2 bg-blanc text-noir text-sm font-semibold font-texte px-2 py-1 rounded-md opacity-0 group-hover:opacity-100 transition-opacity duration-300">2023</div>
+        <div class="absolute top-2 right-2 bg-blanc text-noir text-sm font-semibold font-texte px-2 py-1 rounded-md opacity-0 group-hover:opacity-100 transition-opacity duration-300">Motion Design</div>
+      </figure>
+
       <figure class="relative group rounded-xl overflow-hidden cursor-pointer w-full sm:w-72 md:w-96 h-auto">
         <img src="/BunBunImg.png" alt="BunBun Coffee" class="w-full h-full object-cover transition-transform duration-400 group-hover:scale-110"/>
         <figcaption class="absolute inset-0 flex items-end text-xl md:text-2xl font-bold font-titre text-transparent p-3 clip-path-inset transition-[clip-path,color] duration-400 group-hover:clip-path-none group-hover:text-blanc group-hover:bg-noir/60">BunBun Coffee</figcaption>
