--- a/src/pages/realisations.astro
+++ b/src/pages/realisations.astro
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>À propos</title>
+    <title>Joris LEGER - Réalisations</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-noir">
