--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -182,8 +182,8 @@
     </section>
 
     <section id="contact" class="flex justify-center items-center px-4 md:px-20 py-10 md:h-screen bg-noir">
-        <div class="w-full max-w-4xl grid grid-cols-1 gap-6 md:grid-cols-2">
-            <form action="https://formspree.io/f/xannkbwl" method="POST" class="w-full grid grid-cols-1 gap-6 md:grid-cols-2">
+        <div class="w-full max-w-4xl mx-auto gap-6 md:grid-cols-2">
+            <form action="https://formspree.io/f/xannkbwl" method="POST" class="w-full grid grid-cols-1 gap-6">
                 <div>
                     <label for="fullName" class="block text-blanc font-medium text-lg font-titre mb-2">Nom et Prénom</label>
                     <input type="text" id="fullName" name="fullName" class="bg-blanc w-full px-4 py-2 border border-blanc rounded-md focus:outline-offset-2 focus:ring-2 focus:ring-blanc" required>
