--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,10 +68,10 @@
                 <img src="/Déco-B.svg" alt="Décoration" class="w-24 md:w-36" width="144" height="144" loading="lazy">
             </div>
             <div class="mb-5">
-                <p class="text-blanc font-texte">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="text-blanc font-texte">Bienvenue sur mon portfolio ! Ce lieu reflète ce qui me passionne : la création, l’exploration et le partage. Vous y découvrirez mon parcours, mes compétences et mes projets, fruits d’un mélange de créativité et de technique.</p>
             </div>
             <div>
-                <p class="text-blanc font-texte">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="text-blanc font-texte">Étudiant en BUT Métiers du Multimédia et de l’Internet, je m’épanouis en explorant les univers du design, du motion et du web. Mais ma vie ne se limite pas à ça : quand je ne suis pas en train de concevoir ou d’imaginer, vous me trouverez sur les sentiers en vélo de descente, plongé dans des jeux vidéo ou partageant de bons moments entre amis.</p>
             </div>
         </div>
     </section>
