--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,10 +171,13 @@
                 </div>
                 <div class="px-4">
                     <div class="mb-5">
-                        <p class="text-blanc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p class="text-blanc">Bienvenue dans la section dédiée à mes réalisations, un espace où je vous invite à découvrir un condensé de mes projets les plus marquants. Que ce soit dans la création graphique, le prototypage ou encore l'animation, chaque projet que je réalise est l’occasion de repousser mes limites, d’explorer de nouvelles idées et de donner vie à des concepts originaux.</p>
+                    </div>
+                    <div class="mb-5">
+                        <p class="text-blanc">Vous y retrouverez des travaux variés comme des prototypes d’applications interactives, des affiches animées, ou encore des expériences immersives en motion design et VFX. Ces créations témoignent de ma passion pour le multimédia et mon envie constante de raconter des histoires à travers des supports visuels.</p>
                     </div>
                     <div class="mb-10">
-                        <p class="text-blanc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p class="text-blanc">Chacun de ces projets est le reflet de mon apprentissage et de ma progression dans le domaine du multimédia et de l’Internet. Je vous invite à explorer ces réalisations, fruits de ma créativité et de ma curiosité, et à plonger dans mon univers où innovation et passion se rencontrent.</p>
                     </div>
                 </div>
             </div>
